[package]
name = "coinjoin_analyzer"
version = "0.1.0"
authors = ["Felix Konstantin Maurer <maufl@maufl.de>"]

[dependencies]
nom = "^2.1"
bit-vec = "0.4.3"
bloom = { git = "https://github.com/maufl/bloom-rs" }
num = "0.1.34"
rand = "0.3.14"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rmp-serde = "0.12"
rayon = "*"
clap = "2"
