[package]
name = "coinjoin_analyzer"
version = "0.1.1"
authors = ["Felix Konstantin Maurer <maufl@maufl.de>"]
rust-version = "1.60.0"

[dependencies]
nom = "^2.1"
bit-vec = "0.4.3"
bloom = { git = "https://github.com/maufl/bloom-rs" }
num = "0.4.3"
rand = "0.3.14"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
rmp-serde = "1.1"
rayon = "*"
clap = "2"
